--- a/Processus de développement/Réalisation/mystyle.css
+++ b/Processus de développement/Réalisation/mystyle.css
@@ -37,3 +37,16 @@ border-color: #3751FF !important;
     .ouvrier-info {
   background-color: #f2f2f2;
   }
+
+  .profile {
+      border: 1px solid #e1e1e1;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #3751FF;
+      font-size: 20px;
+      color: white;
+      width: 40px;
+      height: 40px;
+  }
